LITTERPIC-271 - Fix donate button style on mobile

--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -148,12 +148,11 @@
   }
 
   .donate-button {
-    font-size: 1rem;
-    font-weight: normal;
-    height: 2rem;
+    font-size: .75rem;
+    font-weight: bold;
+    height: 2.25rem;
     margin-bottom: 0;
     margin-top: 0;
-    padding: .5rem;
   }
 
   .logo-bar {
